--- a/TestFrameworkCore/TestFrameworkCore.csproj
+++ b/TestFrameworkCore/TestFrameworkCore.csproj
@@ -1,97 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F16DC6D4-A057-48DC-BB68-E97299DEB168}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestFrameworkCore</RootNamespace>
-    <AssemblyName>TestFrameworkCore</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">15.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
-    <IsCodedUITest>False</IsCodedUITest>
-    <TestProjectType>UnitTest</TestProjectType>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="RestSharp, Version=106.6.10.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
+    <None Remove="TestResources\Media\mobile-marketing.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AuthenticationHelper.cs" />
-    <Compile Include="ContentTypes\Blogs\Blogs.cs" />
-    <Compile Include="ContentTypes\Calendars\Calendars.cs" />
-    <Compile Include="ContentTypes\Classifications\Classifications.cs" />
-    <Compile Include="ContentTypes\Content Blocks\ContentBlocks.cs" />
-    <Compile Include="ContentTypes\DocumentLibraries\DocumentLibraries.cs" />
-    <Compile Include="ContentTypes\Documents\Documents.cs" />
-    <Compile Include="ContentTypes\MediaContent.cs" />
-    <Compile Include="ContentTypes\Metadata\Metadata.cs" />
-    <Compile Include="ContentTypes\Events\Events.cs" />
-    <Compile Include="ContentTypes\Flat\Flat.cs" />
-    <Compile Include="ContentTypes\Folders\Folders.cs" />
-    <Compile Include="ContentTypes\Hierarchical\Hierarchical.cs" />
-    <Compile Include="ContentTypes\ImageLibraries\ImageLibraries.cs" />
-    <Compile Include="ContentTypes\Images\Images.cs" />
-    <Compile Include="ContentTypes\List Items\ListItems.cs" />
-    <Compile Include="ContentTypes\Lists\Lists.cs" />
-    <Compile Include="ContentTypes\News\News.cs" />
-    <Compile Include="ContentTypes\Content.cs" />
-    <Compile Include="ContentTypes\Pages\Pages.cs" />
-    <Compile Include="ContentTypes\Posts\Posts.cs" />
-    <Compile Include="ContentTypes\VideoLibraries\VideoLibraries.cs" />
-    <Compile Include="ContentTypes\Videos\Videos.cs" />
-    <Compile Include="MediaContentOperations.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ContentOperations.cs" />
-    <Compile Include="SiteSettings.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="TestResources\Media\digital_marketing.pdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup />
+
   <ItemGroup>
     <Content Include="TestResources\Media\mobile-marketing.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestResources\Media\digital_marketing.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
